<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main2">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:navGraph="@navigation/mobile_navigation" />

    <ImageButton
        android:id="@+id/transfer"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_background"
        android:color="@color/green_toska"
        android:contentDescription="@string/button_transfer"
        android:scaleType="center"
        android:shape="oval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transfer" />

    <ImageButton
        android:id="@+id/bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/blue_sea"
        android:contentDescription="@string/button_bayar"
        app:layout_constraintStart_toEndOf="@+id/transfer"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bayar" />

    <ImageButton
        android:id="@+id/beli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/yellow"
        android:contentDescription="@string/button_beli"
        app:layout_constraintStart_toEndOf="@+id/bayar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/beli" />

    <ImageButton
        android:id="@+id/emoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/light_brown"
        android:contentDescription="@string/button_emoney"
        app:layout_constraintStart_toEndOf="@+id/beli"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emoney" />

    <ImageButton
        android:id="@+id/transaksi_tertunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dusty_purple"
        android:contentDescription="@string/button_transaksi_tertunda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer"
        app:srcCompat="@drawable/transaksi_tertunda" />

    <ImageButton
        android:id="@+id/favorit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dusty_purple"
        android:contentDescription="@string/button_favorit"
        app:layout_constraintStart_toEndOf="@id/transaksi_tertunda"
        app:layout_constraintTop_toBottomOf="@+id/bayar"
        app:srcCompat="@drawable/favoritku" />

    <ImageButton
        android:id="@+id/linkaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/dusty_purple"
        android:contentDescription="@string/button_favorit"
        app:layout_constraintStart_toEndOf="@id/favorit"
        app:layout_constraintTop_toBottomOf="@+id/beli"
        app:srcCompat="@drawable/linkaja" />

    <ImageButton
        android:id="@+id/rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/blue_sea"
        android:contentDescription="@string/button_favorit"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintStart_toEndOf="@id/linkaja"
        app:layout_constraintTop_toBottomOf="@+id/emoney"
        app:srcCompat="@drawable/rewards" />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/account_type"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="12dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linkaja"></androidx.recyclerview.widget.RecyclerView>-->

    <!--    <include-->
<!--        layout="@layout/account_type_item"-->
<!--        android:id="@+id/cv_account"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/margin_left"-->
<!--        android:layout_marginEnd="@dimen/margin_right"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linkaja"-->
<!--        />-->


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkaja"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray"
            android:dividerPadding="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@color/white_gray"
                android:text="@string/tab_giro"
                android:textSize="@dimen/cv_title_font" />

            <include
                layout="@layout/account_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_account2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_account"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray"
            android:dividerPadding="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_title2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@color/white_gray"
                android:text="TABUNGAN RENCANA"
                android:textSize="@dimen/cv_title_font" />

            <include
                layout="@layout/account_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>